almost done with katharina's polish

--- a/case-decomposition.tex
+++ b/case-decomposition.tex
@@ -1102,7 +1102,9 @@ In its landing position the internal structure of the \ac{nom}P is no longer sho
 \end{forest}
 \label{ex:khanty-luw-el-movement}
 
-The result of the movement is given in \ref{ex:khanty-luw-el-spellout}. The lexical tree in \ref{ex:khanty-el-lexicon} matches the syntactic structure, and \ac{acc}P is spelled out as \tit{e:l}.
+The result of the movement is given in \ref{ex:khanty-luw-el-spellout}. The lexical tree in \ref{ex:khanty-el-lexicon} matches the syntactic structure, and \ac{acc}P is spelled out as \tit{e:l}.\footnote{
+Notice here that it is not a coincidence that the lexical tree for \ref{ex:khanty-el-lexicon} has a unary bottom, meaning that it only has a single feature at the bottom of its structure. Lexical entries with unary bottoms can only be inserted after an instance of spell-out driven movement has taken place \citep{starke2018}.
+}
 
 \ex. \begin{forest} boom
 [\ac{acc}P
