--- a/deriving-internalonly.tex
+++ b/deriving-internalonly.tex
@@ -393,7 +393,7 @@ Consider Table \ref{tbl:mg-paradigm-dem} and Table \ref{tbl:mg-paradigm-wh-rels-
 
 \begin{table}[htbp]
 \center
-\caption {Modern German relative pronouns in headless relatives \pgcitep{durrell2016}{5.3.3} (repeated)}
+\caption {Modern German relative pronouns (headless relatives) \pgcitep{durrell2016}{5.3.3} (repeated)}
 \begin{tabular}{ccc}
 \toprule
             & \ac{an} & \tsc{inan}\\
@@ -1661,7 +1661,7 @@ In Figure \ref{fig:mg-int=ext}, I give the syntactic structure of the extra ligh
 The extra light head consists of a single morpheme: \tit{n}.
 The relative pronoun consists of two morphemes: \tit{we} and \tit{n}.
 As usual, I circle the part of the structure that corresponds to a particular lexical entry, or I reduce the structure to a triangle, and I place the corresponding phonology below it.
-I draw a dashed circle around the biggest possible element that is structurally contained in both the extra light head and the relative pronoun.
+I draw a dashed circle around the \tsc{acc}P, as it is the biggest possible element that is structurally contained in both the extra light head and the relative pronoun.
 
 The extra light head consists of a single morpheme: the \tsc{acc}P.
 This \tsc{acc}P is structurally contained in the relative pronoun. Therefore, the extra light head can be deleted. I signal the deletion of the extra light head by marking the content of its circle gray.
@@ -1756,8 +1756,7 @@ In Figure \ref{fig:mg-int-wins}, I give the syntactic structure of the extra lig
 
 The extra light head consists of a single morpheme: \tit{n}.
 The relative pronoun consists of two morphemes: \tit{we} and \tit{m}.
-Again, I circle the part of the structure that corresponds to a particular lexical entry, or I reduce the structure to a triangle, and I place the corresponding phonology below it.
-I draw a dashed circle around the biggest possible element that is structurally a constituent in both the extra light head and the relative pronoun.
+I draw a dashed circle around the \tsc{acc}P, as it is the biggest possible element that is structurally a constituent in both the extra light head and the relative pronoun.
 
 The extra light head consists of a single morpheme: the \tsc{acc}P.
 This \tsc{acc}P is structurally contained in the relative pronoun. Therefore, the extra light can be deleted. I signal the deletion of the extra light head by marking the content of its circle gray.
@@ -1857,8 +1856,7 @@ In Figure \ref{fig:mg-ext-wins}, I give the syntactic structure of the extra lig
 
 The extra light head consists of a single morpheme: \tit{m}.
 The relative pronoun consists of two morphemes: \tit{we} and \tit{n}.
-Again, I circle the part of the structure that corresponds to a particular lexical entry, or I reduce the structure to a triangle, and I place the corresponding phonology below it.
-I draw a dashed circle around the biggest possible element that is structurally a constituent in both the extra light head and the relative pronoun.
+I draw a dashed circle around the \tsc{acc}P, as it is the biggest possible element that is structurally a constituent in both the extra light head and the relative pronoun.
 
 In this case, the light head is not structurally contained in the relative pronoun.
 The extra light head consists of a single morpheme: the \tsc{dat}P.
@@ -1942,7 +1940,7 @@ I derive this from the internal syntax of light heads and relative pronouns in M
       \end{forest}\\
       \bottomrule
   \end{tabular}
-   \caption {\tsc{lh} and \tsc{rp} in Modern German (repeated)}
+   \caption {\tsc{elh} and \tsc{rp} in Modern German (repeated)}
   \label{fig:rel-lh-mg-sum}
 \end{figure}
 
