--- a/deriving-unrestricted.tex
+++ b/deriving-unrestricted.tex
@@ -1621,7 +1621,7 @@ In Figure \ref{fig:ohg-int=ext-elh}, I give the syntactic structure of the extra
 The extra light head consists of a single morpheme: \tit{er}.
 The relative pronoun consists of two morphemes: \tit{dh} and \tit{er}.
 As usual, I circle the part of the structure that corresponds to a particular lexical entry, or I reduce the structure to a triangle, and I place the corresponding phonology below it.
-I draw a dashed circle around the biggest possible element that is structurally contained in both the extra light head and the relative pronoun.
+I draw a dashed circle around the \tsc{nom}P, as it is the biggest possible element that is structurally contained in both the extra light head and the relative pronoun.
 
 The extra light head consists of a single morpheme: the \tsc{nom}P.
 This \tsc{nom}P is structurally contained in the relative pronoun. Therefore, the extra light head can be deleted. I signal the deletion of the extra light head by marking the content of its circle gray.
@@ -1718,8 +1718,7 @@ In Figure \ref{fig:ohg-int=ext-lh}, I give the syntactic structure of the light 
 
 The light head consists of two morphemes: \tit{dh} and \tit{er}.
 The relative pronoun also consists of two morphemes: \tit{dh} and \tit{er}.
-Again, I circle the part of the structure that corresponds to a particular lexical entry, or I reduce the structure to a triangle, and I place the corresponding phonology below it.
-I draw a dotted circle around the biggest possible element that is formally contained in both the light head and the relative pronoun.
+I draw a dotted circle around the \tsc{nom}P, as it is the biggest possible element that is formally contained in both the light head and the relative pronoun.
 
 The relative pronoun (the \tsc{rel}P realized by \tit{dher}) is formally contained in the light head (the \tsc{dem}P realized by \tit{dher}).
 Therefore, the relative pronoun can be deleted. I signal the deletion of the relative pronoun by marking the content of its circle gray.
@@ -1818,8 +1817,7 @@ In Figure \ref{fig:ohg-ext-wins-elh}, I give the syntactic structure of the extr
 
 The extra light head consists of a single morpheme: \tit{er}.
 The relative pronoun consists of two morphemes: \tit{dh} and \tit{en}.
-Again, I circle the part of the structure that corresponds to a particular lexical entry, or I reduce the structure to a triangle, and I place the corresponding phonology below it.
-I draw a dashed circle around the biggest possible element that is structurally contained in both the extra light head and the relative pronoun.
+I draw a dashed circle around the \tsc{nom}P, as it is the biggest possible element that is structurally contained in both the extra light head and the relative pronoun.
 
 In this case, the light head is not structurally contained in the relative pronoun.
 The extra light head consists of a single morpheme: the \tsc{acc}P.
@@ -1921,8 +1919,7 @@ In Figure \ref{fig:ohg-ext-wins-lh}, I give the syntactic structure of the light
 
 The light head consists of two morphemes: \tit{dh} and \tit{en}.
 The relative pronoun also consists of two morphemes: \tit{dh} and \tit{er}.
-Again, I circle the part of the structure that corresponds to a particular lexical entry, or I reduce the structure to a triangle, and I place the corresponding phonology below it.
-I draw a dotted circle around the biggest possible element that is formally contained in both the light head and the relative pronoun.
+I draw a dotted circle around the \tsc{nom}P, as it is the biggest possible element that is formally contained in both the light head and the relative pronoun.
 
 The light head is realized as \tit{dhen}, and the relative pronoun is realized as \tit{dher}.
 The light head is not formally contained in the relative pronoun, and the relative pronoun is not formally contained in the light head.
@@ -2291,8 +2288,7 @@ In Figure \ref{fig:ohg-int-wins-elh}, I give the syntactic structure of the extr
 
 The extra light head consists of a single morpheme: \tit{er}.
 The relative pronoun consists of two morphemes: \tit{th} and \tit{en}.
-Again, I circle the part of the structure that corresponds to a particular lexical entry, or I reduce the structure to a triangle, and I place the corresponding phonology below it.
-I draw a dashed circle around the biggest possible element that is structurally a constituent in both the extra light head and the relative pronoun.
+I draw a dashed circle around the \tsc{nom}P, as it is the biggest possible element that is structurally a constituent in both the extra light head and the relative pronoun.
 
 The extra light head consists of a single morpheme: the \tsc{nom}P.
 This \tsc{nom}P is structurally contained in the relative pronoun. Therefore, The extra light head can be deleted. I signal the deletion of the extra light head by marking the content of its circle gray.
@@ -2391,8 +2387,7 @@ In Figure \ref{fig:ohg-int-wins-lh}, I give the syntactic structure of the light
 
 The light head consists of two morphemes: \tit{th} and \tit{er}.
 The relative pronoun also consists of two morphemes: \tit{th} and \tit{en}.
-Again, I circle the part of the structure that corresponds to a particular lexical entry, or I reduce the structure to a triangle, and I place the corresponding phonology below it.
-I draw a dotted circle around the biggest possible element that formally contained in both the light head and the relative pronoun.
+I draw a dotted circle around the \tsc{nom}P, as it is the biggest possible element that formally contained in both the light head and the relative pronoun.
 
 The light head is realized as \tit{ther}, and the relative pronoun is realized as \tit{then}.
 The light head is not formally contained in the relative pronoun, and the relative pronoun is not formally contained in the light head.
@@ -2844,7 +2839,7 @@ I derive this from the internal syntax of two light heads and the internal synta
       \end{forest}\\
       \bottomrule
   \end{tabular}
-   \caption {\tsc{elh} and \tsc{rp} in Old High German}
+   \caption {\tsc{elh} and \tsc{rp} in Old High German (repeated)}
   \label{fig:rel-elh-ohg-sum}
 \end{figure}
 
@@ -2914,7 +2909,7 @@ The features of the demonstrative (which is the second possible light head) are 
       \bottomrule
   \end{tabular}
 \end{adjustbox}
-   \caption {\tsc{dem} and \tsc{rp} in Old High German}
+   \caption {\tsc{dem} and \tsc{rp} in Old High German (repeated)}
   \label{fig:rel-lh-ohg-sum}
 \end{figure}
 
