--- a/the-basic-idea.tex
+++ b/the-basic-idea.tex
@@ -441,7 +441,7 @@ In Figure \ref{fig:nom-nom-intonly}, I give an example in which the relative pro
   \label{fig:nom-nom-intonly}
 \end{figure}
 
-I draw a dashed circle around the biggest possible element that is contained in both the light head and the relative pronoun.
+I draw a dashed circle around the \tsc{nom}P, as it is the biggest possible element that is contained in both the light head and the relative pronoun.
 The light head (the \tsc{nom}P) is contained in the relative pronoun (the \tsc{rel}P), so the light head can be deleted. I illustrate this by marking the content of the dashed circles for the light head gray.
 As the light head is deleted, the headless relative surfaces with the relative pronoun that bears the internal case.
 
@@ -497,7 +497,7 @@ In Figure \ref{fig:nom-acc-intonly}, I give an example in which the relative pro
   \label{fig:nom-acc-intonly}
 \end{figure}
 
-I draw a dashed circle around the biggest possible element that is contained in both the light head and the relative pronoun.
+I draw a dashed circle around the \tsc{nom}P, as it is the biggest possible element that is contained in both the light head and the relative pronoun.
 The light head (the \tsc{nom}P) still is contained in the relative pronoun (the \tsc{rel}P), so the light head can be deleted. I illustrate this by marking the content of the dashed circles for the light head gray.
 As the light head is deleted, the headless relative surfaces with the relative pronoun that bears the internal case.
 
@@ -552,7 +552,7 @@ In Figure \ref{fig:acc-nom-intonly}, I give an example in which the light head b
   \label{fig:acc-nom-intonly}
 \end{figure}
 
-I draw a dashed circle around the biggest possible element that is contained in both the light head and the relative pronoun.
+I draw a dashed circle around the \tsc{nom}P, as it is the biggest possible element that is contained in both the light head and the relative pronoun.
 Different from the examples in Figures \ref{fig:nom-nom-intonly} and \ref{fig:acc-nom-intonly}, the light head is not contained in the relative pronoun.
 The \tsc{nom}P of the light head is contained in the relative pronoun, but the relative pronoun does not contain the feature \tsc{k}2 that forms an \tsc{acc}P.
 The \tsc{nom}P of the relative pronoun is contained in the relative pronoun, but the light head does not contain the feature \tsc{rel} that forms a \tsc{rel}P.
@@ -726,7 +726,7 @@ In Figure \ref{fig:nom-nom-matching}, I give an example in which the light head 
  \label{fig:nom-nom-matching}
 \end{figure}
 
-I draw a dashed circle around the biggest possible element that is contained in both the light head and the relative pronoun.
+I draw a dashed circle around the \tsc{nom}P, as it is the biggest possible element that is contained in both the light head and the relative pronoun.
 In this instance it is no problem that the ϕP has moved over the \tsc{nom}P.
 The light head (the \tsc{nom}P) still is contained in the relative pronoun (the \tsc{rel}P), so the light head can be deleted. I illustrate this by marking the content of the dashed circles for the light head gray.
 As the light head is deleted, the headless relative surfaces with the relative pronoun that bears the internal case.
@@ -798,7 +798,7 @@ In Figure \ref{fig:nom-acc-matching}, I give an example in which the relative pr
  \label{fig:nom-acc-matching}
 \end{figure}
 
-I draw a dashed circle around the biggest possible element that is contained in both the light head and the relative pronoun.
+I draw a dashed circle around the ϕP and the \tsc{nom}P, as they are the biggest possible elements that are contained in both the light head and the relative pronoun.
 The light head (the \tsc{nom}P) no longer is contained in the relative pronoun (the \tsc{rel}P). Therefore, the light head cannot be deleted, which I illustrate by leaving the content of both dashed circles unfilled.
 As none of the items is deleted, there is no grammatical headless relative possible.
 Figure \ref{fig:nom-acc-matching} shows that in this instance it is a problem the ϕP has moved over the \tsc{nom}P or \tsc{acc}P.
