--- a/thesis.tex
+++ b/thesis.tex
@@ -1,6 +1,6 @@
 \documentclass[hidelinks,a4paper,oneside]{memoir}
 
-% \includeonly{deriving-unrestricted}
+% \includeonly{deriving-matching}
 %
 % \setulmarginsandblock{3.3cm}{4cm}{*}
 % \setlrmarginsandblock{3cm}{3cm}{*}
